--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,7 +11,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Install dependencies
         run: |
@@ -19,18 +19,27 @@ jobs:
           sudo apt-get install -y lftp
           npm install -g minifier
 
+      - name: Set up PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.2'
+
       - name: Minify JS and CSS
         run: |
           find view/js -type f ! -name "*.min.js" -exec minify -o {} {} \;
           find view/css -type f ! -name "*.min.css" -exec minify -o {} {} \;
 
+      #- name: Run tests
+      #  run: vendor/bin/phpunit --stop-on-failure
+
       - name: Deploy to Server
+        if: ${{ success() }}
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /var/www/FLYARTS-QUOTIDIAN/
+          server-dir: /public_html/FLYARTS-QUOTIDIAN/
           local-dir: ./
           exclude: |
             .git*/**
