--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,37 +1,46 @@
 name: Deployment
 
+# {1}
 on:
   push:
-    branches:
-      - master
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
 
 jobs:
-  deploy:
+  angular:
+    name: Angular Build
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        node-version: [20]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      # {2}
+      - name: Checkout the source code
+        uses: actions/checkout@v3
 
-      - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y lftp
-          npm install -g minifier
-
-      - name: Set up PHP
-        uses: shivammathur/setup-php@v2
+      # {3}
+      - name: Setup Node.js $
+        uses: actions/setup-node@v3
         with:
-          php-version: '8.2'
+          node-version: $
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
 
-      - name: Minify JS and CSS
-        run: |
-          find view/js -type f ! -name "*.min.js" -exec minify -o {} {} \;
-          find view/css -type f ! -name "*.min.css" -exec minify -o {} {} \;
+      # {4}
+      - name: Install dependencies
+        run: npm ci
+        
+      # {5}
+      - name: Run tests
+        run: npm run test:ci
 
-      #- name: Run tests
-      #  run: vendor/bin/phpunit --stop-on-failure
+      # {6}
+      - name: Build
+        run: npm run build
 
+      # {7}
       - name: Deploy to Server
         if: ${{ success() }}
         uses: SamKirkland/FTP-Deploy-Action@v4.3.4
