--- a/back-end/package.json
+++ b/back-end/package.json
@@ -21,12 +21,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
     "connect-redis": "^7.1.1",
+    "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
     "ioredis": "^5.4.1",
     "mysql2": "^3.9.7",
