--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,50 +8,103 @@ on:
     branches: [ "master" ]
 
 jobs:
-  angular:
-    name: Angular Build
+  test:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        node-version: [20]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-    steps:
-      # {2}
-      - name: Checkout the source code
-        uses: actions/checkout@v3
+        service: [angular, nest]
 
-      # {3}
-      - name: Setup Node.js $
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: $
-          cache: 'npm'
-          cache-dependency-path: package-lock.json
+          node-version: '16'
 
-      # {4}
       - name: Install dependencies
-        run: npm ci
-        
-      # {5}
+        run: |
+          if [ "${{ matrix.service }}" == "angular" ]; then
+            cd frontend
+          else
+            cd backend
+          fi
+          npm install
+
       - name: Run tests
-        run: npm run test:ci
+        run: |
+          if [ "${{ matrix.service }}" == "angular" ]; then
+            cd frontend
+            npm test
+          else
+            cd backend
+            npm run test
+          fi
 
-      # {6}
-      - name: Build
-        run: npm run build
+  build:
+    runs-on: ubuntu-latest
+    needs: test
 
-      # {7}
-      - name: Deploy to Server
-        if: ${{ success() }}
-        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+    strategy:
+      matrix:
+        service: [angular, nest]
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '16'
+
+      - name: Install dependencies
+        run: |
+          if [ "${{ matrix.service }}" == "angular" ]; then
+            cd frontend
+          else
+            cd backend
+          fi
+          npm install
+
+      - name: Build project
+        run: |
+          if [ "${{ matrix.service }}" == "angular" ]; then
+            cd frontend
+            npm run build --prod
+          else
+            cd backend
+            npm run build
+          fi
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Deploy Angular to FTP
+        if: matrix.service == 'angular'
+        uses: SamKirkland/FTP-Deploy-Action@4.3.4
         with:
           server: ${{ secrets.FTP_SERVER }}
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
-          server-dir: /public_html/FLYARTS-QUOTIDIAN/
-          local-dir: ./
-          exclude: |
-            .git*/**
-            .idea/**
-            content/**
-            .git*
+          server-dir: public_html/FLYARTS-QUOTIDIAN/website/
+          local-dir: frontend/dist/browser/
+
+      - name: Deploy Nest.js to FTP
+        if: matrix.service == 'nest'
+        uses: SamKirkland/FTP-Deploy-Action@4.2.0
+        with:
+          server: ${{ secrets.FTP_SERVER }}
+          username: ${{ secrets.FTP_USERNAME }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          server-dir: public_html/FLYARTS-QUOTIDIAN/api/dist/
+          local-dir: backend/dist/
+
+
