--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           if [ "${{ matrix.service }}" == "angular" ]; then
             cd frontend
-            npm run test:ci
+            npm run test
           else
             cd backend
             npm run test
