--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,44 +8,44 @@ on:
     branches: [ "master" ]
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
+  # test:
+  #   runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        service: [angular, nest]
+  #   strategy:
+  #     matrix:
+  #       service: [angular, nest]
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: '20'
 
-      - name: Install dependencies
-        run: |
-          if [ "${{ matrix.service }}" == "angular" ]; then
-            cd frontend
-          else
-            cd backend
-          fi
-          npm install
+  #     - name: Install dependencies
+  #       run: |
+  #         if [ "${{ matrix.service }}" == "angular" ]; then
+  #           cd frontend
+  #         else
+  #           cd backend
+  #         fi
+  #         npm install
 
-      - name: Run tests
-        run: |
-          if [ "${{ matrix.service }}" == "angular" ]; then
-            cd frontend
-            npm run test
-          else
-            cd backend
-            npm run test
-          fi
+  #     - name: Run tests
+  #       run: |
+  #         if [ "${{ matrix.service }}" == "angular" ]; then
+  #           cd frontend
+  #           npm run test:ci
+  #         else
+  #           cd backend
+  #           npm run test
+  #         fi
 
   build:
     runs-on: ubuntu-latest
-    needs: test
+    # neesds: test
 
     strategy:
       matrix:
@@ -73,7 +73,7 @@ jobs:
         run: |
           if [ "${{ matrix.service }}" == "angular" ]; then
             cd frontend
-            npm run build --prod
+            npm run build
           else
             cd backend
             npm run build
