--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -85,6 +85,20 @@ jobs:
             npm run build
           fi
 
+      - name: Archive build artifacts
+        if: matrix.service == 'angular'
+        uses: actions/upload-artifact@v3
+        with:
+          name: frontend-build
+          path: frontend/dist/
+
+      - name: Archive build artifacts
+        if: matrix.service == 'nest'
+        uses: actions/upload-artifact@v3
+        with:
+          name: backend-build
+          path: backend/dist/
+
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -92,6 +106,18 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: frontend-build
+          path: frontend/dist/
+
+      - name: Download build artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: backend-build
+          path: backend/dist/
 
       - name: Deploy Angular to FTP
         uses: SamKirkland/FTP-Deploy-Action@4.2.0
