Update Github Action file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -126,7 +126,7 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           server-dir: /public_html/FLYARTS-QUOTIDIAN/website/
-          local-dir: frontend/dist/
+          local-dir: frontend/dist/browser
 
       - name: Deploy Nest.js to FTP
         uses: SamKirkland/FTP-Deploy-Action@4.2.0
